--- a/angular-login/src/app/login-card/login-card.component.html
+++ b/angular-login/src/app/login-card/login-card.component.html
@@ -1,14 +1,15 @@
 <form [formGroup]="loginForm" class="card card-login">
+    <div *ngIf="loginErrors.loginFailed || loginErrors.fieldInvalid" class="form-text text-danger">{{loginErrors.message}}</div>
     <div class="form-group">
         <label for="input-username">Username</label>
         <input type="username" class="form-control" id="input-username" formControlName="username">
-        <div *ngIf="username?.touched  && username?.errors?.required" class="form-text text-danger">Username is required!</div>
+        <div *ngIf="username?.touched && username?.errors?.required" class="form-text text-danger">Username is required!</div>
     </div>
     <div class="form-group">
         <label for="input-password">Password</label>
         <input type="password" class="form-control" id="input-password" aria-describedby="passwordHelp" formControlName="password">
         <small id="passwordHelp" class="form-text text-muted">We'll never share your password with anyone else.</small>
-        <div *ngIf="password?.touched  && password?.errors?.required" class="form-text text-danger">Password is required!</div>
+        <div *ngIf="password?.touched && password?.errors?.required" class="form-text text-danger">Password is required!</div>
     </div>
     <div class="card-footer-login">
         <div class="form-check">
