--- a/angular-login/src/app/login-card/login-card.component.html
+++ b/angular-login/src/app/login-card/login-card.component.html
@@ -7,7 +7,10 @@
     </div>
     <div class="form-group">
         <label for="input-password">Password</label>
-        <input type="password" class="form-control" id="input-password" aria-describedby="passwordHelp" formControlName="password">
+        <div class="password-group">
+            <input type="{{passwordModel.type}}" class="form-control password" id="input-password" aria-describedby="passwordHelp" formControlName="password">
+            <button class="btn-pass" (click)="onPasswordShow()"><i class="{{passwordModel.iconClass}}"></i></button>
+        </div>
         <small id="passwordHelp" class="form-text text-muted">We'll never share your password with anyone else.</small>
         <div *ngIf="password?.touched && password?.errors?.required" class="form-text text-danger">Password is required!</div>
     </div>
