Prepares for deployment - deploys
1. Update app.module.ts, defining the entry points and the injector,
this bypasses the login-card.module
2. Installs @angular/elements
3. Executes ng build --outpit-hashing none, so the dist folder is being
created

--- a/angular-login/src/app/login-card/login-card.component.css
+++ b/angular-login/src/app/login-card/login-card.component.css
@@ -85,3 +85,8 @@ input.ng-invalid.ng-touched:focus, input.ng-invalid.ng-touched:hover {
     display: inline;
     padding-right: 2.5rem
 }
+
+.text-success {
+    font-size: 1.2em;
+    color: #00C6AF;
+}
