Introduces test.html to make sure the deployed component works as well as removes the dist/ folder from gitignore

--- a/angular-login/src/app/login-card/login-card.component.html
+++ b/angular-login/src/app/login-card/login-card.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="loginForm" class="card card-login">
-    <div *ngIf="successfulLogin" class="form-text text-success" id="login-success">Success!</div>
+    <div *ngIf="successfulLogin && !(loginErrors.loginFailed || loginErrors.fieldInvalid)" class="form-text text-success" id="login-success">Success!</div>
     <div *ngIf="loginErrors.loginFailed || loginErrors.fieldInvalid" class="form-text text-danger">{{loginErrors.message}}</div>
     <div class="form-group">
         <label for="input-username">Username</label>
