Fixes register.scss
Instead of adding white color to the whole register-card element,
use the set-background function it's child element, form.
That way you get a correct font-color on the labels and you remove
the white borders previously visible

--- a/src/app/register-page/register.scss
+++ b/src/app/register-page/register.scss
@@ -20,7 +20,7 @@ header {
     padding-bottom: 2rem;
 }
 
-register-card {
+register-card > form {
     @include set-background(white);
     margin: 0 1.5em;
 }
