Changes navbar's z-index
Leaflet map had a z-index vlaue of 1000 and thus was on top of the
navbar.

--- a/src/app/home-page/home.scss
+++ b/src/app/home-page/home.scss
@@ -8,10 +8,13 @@
     margin: 2em;
 }
 
-.nav-home {
-    color: $primary-color;
-    text-decoration: underline;
+.custom-navbar {
+    .nav-home {
+        color: $primary-color;
+        text-decoration: underline;
+    }
 }
+
 
 section.home-search {
     max-width: 400px;
@@ -38,8 +41,13 @@ section.home-search {
 
 section.home-map {
     margin-top: 2.5em;
+    z-index: 1;
 
+    div[class^="leaflet-"]{ 
+        z-index: 1;
+    }
     #map {
+        z-index: 1;
         height: 300px;
     }
 }
