--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -45,3 +45,44 @@ header {
 .btn-custom-primary {
     @include set-background($primary-color);
 }
+
+/* Style leaflet markers */
+
+div.marker {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 100%;
+    box-shadow: 4px 2px 8px #888888;
+}
+.marker-red {
+background-color: #ff4f4f;
+}
+.marker-orange {
+background-color: #ffda73;
+}
+.marker-green {
+background-color: #8aff73;
+}
+
+.popup {
+    .leaflet-popup-content {
+        display: flex;
+        flex-direction: column;
+
+        div.popup-title {
+            margin: auto;
+            font-weight: 800;
+            text-decoration: underline;
+            margin-bottom: 0.75em;
+        }
+
+        ul.popup-list {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            
+            // li.popup-item { }
+        }
+    }
+}
+
