--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -46,6 +46,14 @@ header {
     @include set-background($primary-color);
 }
 
+.card-info {
+    @include set-background(#31393E);
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
 /* Style leaflet markers */
 
 div.marker {
