--- a/src/app/report-case-page/report-case.scss
+++ b/src/app/report-case-page/report-case.scss
@@ -9,7 +9,7 @@
 }
 
 .rc-form {
-    margin: 3em 0;
+    margin: 5em 0 3em 0;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -19,9 +19,15 @@
         margin-right: 2em;
         width: 12em;
         height: 100%;
+        border-radius: 0.5rem;
+        padding-left: 0.5em;
     }
 
     .btn {
         margin-left: 2em;
+    }
+
+    i.fa-2x {
+        vertical-align: middle;
     }
 }
