--- a/src/app/report-case-page/report-case.scss
+++ b/src/app/report-case-page/report-case.scss
@@ -26,8 +26,9 @@
     .btn {
         margin-left: 2em;
     }
+}
 
-    i.fa-2x {
-        vertical-align: middle;
-    }
+.nav-rep-case {
+    color: $primary-color;
+    text-decoration: underline;
 }
