--- a/src/app/report-case-page/report-case.scss
+++ b/src/app/report-case-page/report-case.scss
@@ -9,11 +9,17 @@
 }
 
 .rc-form {
-    margin: 5em 0 3em 0;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
+    form {
+        margin: 5em 0 3em 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
     
     #datepicker {
         margin-right: 2em;
