--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -110,3 +110,24 @@ background-color: #8aff73;
     }
 }
 
+/* Web-kit styles */
+
+// Scrollbar
+::-webkit-scrollbar {
+    width: 0.4em;
+}
+  
+::-webkit-scrollbar-track {
+    background: #f1f1f1aa;
+    border-radius: 1em;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #00af9b;
+    border-radius: 1em;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #006e61;
+    border-radius: 1em;
+}
