--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -115,6 +115,7 @@ background-color: #8aff73;
 // Scrollbar
 ::-webkit-scrollbar {
     width: 0.4em;
+    height: 0.4em;
 }
   
 ::-webkit-scrollbar-track {
