--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -63,6 +63,11 @@ header {
 
 .btn-custom-primary {
     @include set-background($primary-color);
+
+    &:focus {
+        box-shadow: none;
+        color: black;
+    }
 }
 
 .card-info {
