--- a/src/app/user-profile/user-profile.scss
+++ b/src/app/user-profile/user-profile.scss
@@ -1,6 +1,5 @@
 @import "../styles.scss";
 
-
 // Header - profile picture
 #profile-picture-header {
     display: flex;
@@ -85,9 +84,10 @@
         margin-left: 1.5em;
     }
 
-    button.btn-custom-collapse {
+    .btn-custom-collapse {
         background-color: transparent;
         color: $primary-color;
+        border: none;
         border-bottom: solid 2px $primary-color;
         margin-bottom: 0.5rem;
     }
@@ -114,5 +114,84 @@
 .fas.fa-info-circle {
     &:hover, &:focus {
         color: $primary-color;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .container {
+        display: grid;
+        grid-template-rows: 0.5fr repeat(4, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 4em;
+    }
+
+    .custom-navbar {
+        grid-row: 1 / 2;
+        grid-column: 1 / 3;
+    }
+
+    .profile-picture-header {
+        grid-row: 2 / 3;
+        grid-column: 1 / 2;        
+    }
+
+    #profile-form {
+        grid-row: 3 / 5;
+        grid-column: 1 / 2;
+    }
+
+    .collapse-group {
+        div.card.card-body {
+            font-size: 1em;
+            white-space: initial;
+
+            &:hover {
+                transition: all 0.2s ease-out;
+                box-shadow: 3px 3px 2px rgba(192, 192, 192, 0.2);
+                top: -4px;
+                left: -4px;
+                border: 1px solid #cccccc;
+            }
+        }
+        
+        .btn-custom-collapse {
+            cursor: default !important;
+            &:after {
+                content: ":"
+            }
+            
+            i {
+                display: none;
+            }
+        }
+    }
+
+    #collapse-group-locations {
+        grid-row: 2 / 5;
+        grid-column: 2 / 3;
+        
+        #collapse-registered-locations {  
+            display: grid;
+            grid-template-rows: repeat(3, 1fr);
+            grid-template-columns: repeat(3, 1fr);
+            gap: 1em;
+            height: 100% !important;
+
+            div.card.card-body {
+                justify-content: center;
+                text-align: center;
+            }
+        }
+    }
+
+    #collapse-group-covid-positive {
+        grid-column: 2 / 3;
+        grid-row: 5 / 6;
+    }
+
+    .ellipses {
+        display: none;
+        grid-row: 5 / 6;
+        grid-column: 1 / 2;
     }
 }
