--- a/src/app/php_partials/navbar/navbar.scss
+++ b/src/app/php_partials/navbar/navbar.scss
@@ -14,7 +14,7 @@
     background: none;
     background-color: none;
     border: none;
-    position: absolute;
+    position: fixed;
     right: 1.5em;
     z-index: 9999;
 
@@ -30,6 +30,16 @@
     }
 }
 
+.navbar-full-overlay {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: transparent;
+    z-index: 9997;
+}
+
 .navbar-full {
     display: none;
     z-index: 9998;
@@ -41,14 +51,52 @@
     border-left: 1px solid $primary-color;
     position: fixed;
     right: 0;
+    bottom: 0;
 
-    padding-top: 7em;
+    padding-top: 10em;
     margin-top: -4.7em;
-    gap: 0.75em;
+    gap: 1em;
     background-color: #000000df;
 
     .nav-item {
         font-size: 1.2em;
         padding-left: 1.3em;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .custom-navbar {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+
+        button.btn-navbar, .navbar-full-overlay {
+            display: none;
+        }
+
+        .app-title {
+            align-self: flex-start;
+        }
+
+        .navbar-full {
+            display: flex;
+            flex-direction: row;
+            position: absolute;
+            right: 0;
+            top: 0.8em;
+            padding: 0;
+            padding-right: 2em;
+            margin-top: 0.5em;
+
+            min-width: 35em;
+            max-height: 2em;
+
+            background-color: #ffffff;
+            opacity: 70%;
+            color: black;
+            border: 0;
+            border-radius: 0.5em 0 0 0.5em;
+        }
     }
 }
