Adds nav class in profile, fixes css minor bugs

--- a/src/app/user-profile/user-profile.scss
+++ b/src/app/user-profile/user-profile.scss
@@ -1,5 +1,11 @@
 @import "../styles.scss";
 
+// navbar
+.nav-profile {
+    color: $primary-color;
+    text-decoration: underline;
+}
+
 // Header - profile picture
 #profile-picture-header {
     display: flex;
