--- a/src/app/php_partials/navbar/navbar.scss
+++ b/src/app/php_partials/navbar/navbar.scss
@@ -91,6 +91,7 @@
 
             min-width: 35em;
             max-height: 2em;
+            z-index: 99999;
 
             background-color: #ffffff;
             opacity: 70%;
