--- a/src/app/register-location/reg-loc.scss
+++ b/src/app/register-location/reg-loc.scss
@@ -18,28 +18,69 @@
 section.reg-loc {
     max-width: 400px;
     margin: auto;
+    
+    .form-group {
+        margin-top: 1em;
+        font-family: $secondary-font;
+    }
 
     .btn.btn-outline-success {
         color: $primary-color;
         border-color: $primary-color;
-        margin-top: 0.5rem;
+        margin-top: 1em;
 
         &:hover, &:active {
             @include set-background($primary-color);
         }
+    }
 }
+
+#regLoc-respMessage {
+    margin-top: 2em;
 }
 
-
-
-
-
-
-
-section.home-map {
-    margin-top: 2.5em;
+section.regLoc-map {
+    margin: 2.5em;
 
     #map {
+        border-radius: 3%;
         height: 300px;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .container {
+        display: grid;
+        height: 100%;
+        grid-template-rows: 0.2fr 0.5fr 3fr;
+        grid-template-columns: 1fr 1fr;
+        
+        .custom-navbar {
+            grid-row: 1 / 2;
+            grid-column: 1 / 3;
+        }
+
+        #regLoc-header {
+            grid-row: 2 / 3;
+            grid-column: 1 / 2;
+        }
+
+        .reg-loc {
+            grid-row: 3 / 4;
+            grid-column: 1 / 2;
+            width: 100%;
+            height: 100%;
+        }
+
+        .regLoc-map {
+            grid-row: 2 / 4;
+            grid-column: 2 / 3;
+            padding-top: 3em;
+            #map {
+                height: 100%;
+                margin: auto;
+            }
+        }
+
     }
 }
