--- a/src/app/exposed-covid-page/exposed-covid.scss
+++ b/src/app/exposed-covid-page/exposed-covid.scss
@@ -61,3 +61,47 @@
     border-radius: 1em;
     margin-bottom: 2.1em;
 }
+
+@media screen and (min-width: 992px) {
+    .container {
+        display: grid;
+        grid-template-rows: 0.2fr 0.2fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 4em;
+        height: 100%;
+
+        .custom-navbar {
+            grid-row: 1 / 2;
+            grid-column: 1 / 3;
+        }
+
+        #ec-header {
+            grid-row: 2 / 3;
+            grid-column: 1 / 3;
+        }
+
+        .ec-table-section {
+            grid-row: 3 / 4;
+            grid-column: 2 / 3;
+            max-height: initial;
+            margin: 0;
+            margin-bottom: 3em;
+
+        }
+
+        .ec-map {
+            grid-row: 3 / 4;
+            grid-column: 1 / 2;
+            margin-bottom: 3em;
+
+            #map {
+                height: 100%;
+            }
+        }
+    }
+
+    .ellipses {
+        display: none;
+    }
+    
+}
