--- a/src/app/home-page/home.scss
+++ b/src/app/home-page/home.scss
@@ -46,3 +46,44 @@ section.home-map {
         height: 300px;
     }
 }
+
+@media screen and (min-width: 992px) {
+    .container {
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-rows: 0.2fr 2fr 2fr;
+        grid-template-columns: repeat(2, 1fr);
+        
+        .custom-navbar {
+            grid-row: 1 / 2;
+            grid-column: 1 / 3;
+        }
+
+        header#home-header {
+            grid-row: 2 / 3;
+            grid-column: 1 / 2;
+            display: flex;
+            align-self: flex-end;
+        }
+        
+        .home-search {
+            grid-row: 3 / 4;
+            grid-column: 1 / 2;
+            height: 100%;            
+        }
+
+        .home-map {
+            grid-row: 2 / 4;
+            grid-column: 2 / 3;
+            padding: 2em;
+
+            #map {
+                height: 100%;
+                border-radius: 2%;
+            }
+        }
+    }
+
+
+}
