--- a/src/app/report-case-page/report-case.scss
+++ b/src/app/report-case-page/report-case.scss
@@ -13,28 +13,111 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100%;
     form {
         margin: 5em 0 3em 0;
         display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        align-items: center;
-    }
-    
-    #datepicker {
-        margin-right: 2em;
-        width: 12em;
+        flex-direction: column;
+        gap: 0.7em;
         height: 100%;
-        border-radius: 0.5rem;
-        padding-left: 0.5em;
-    }
+        width: 100%;
+        align-items: center;
 
-    .btn {
-        margin-left: 2em;
+        #rc-form-label {
+            width: 100%;
+            padding-left: 1em;
+            text-align: left;
+        }
+
+        #datepicker {
+            width: 90%;
+            height: 2.2em;
+            padding-right: 0.5em;
+            border-radius: 0.5rem;
+            padding-left: 0.5em;
+        }
+    
+        .btn.btn-custom-primary {
+            align-self: flex-end;
+            margin-right: 2em;
+        }
     }
 }
 
 .nav-rep-case {
     color: $primary-color;
     text-decoration: underline;
+}
+
+@media screen and (min-width: 992px) {
+    body {
+        background-color: transparent;
+    }
+    @media screen and (min-height: 702px) {
+        
+        .container {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+
+            $rc-left-margin: 30em;
+            $rc-right-margin: $rc-left-margin/3;
+
+            header#rc-header {
+                margin-left: $rc-left-margin/2;
+                margin-right: $rc-right-margin/2;
+            }
+
+            .card.card-info {
+                margin-left: $rc-left-margin;
+                margin-right: $rc-right-margin;
+            }
+
+            .rc-form {
+                margin-left: $rc-left-margin;
+                margin-right: $rc-right-margin;
+                #rc-form-label {
+                    font-size: larger;
+                }
+            }
+        }
+    }
+
+    @media screen and (max-height: 702px) {
+        .container {
+            display: grid;
+            grid-template-rows: 0.2fr 0.2fr 1fr;
+            grid-template-columns: 1fr 1fr;
+
+            .custom-navbar {
+                grid-row: 1 / 2;
+                grid-column: 1 / 3;
+            }
+        
+            #rc-header {
+                grid-row: 2 / 3;
+                grid-column: 1 / 2;
+            }
+        
+            .card.card-info {
+                grid-row: 3 / 4;
+                grid-column: 1 / 2;
+                width: 90%;
+                height: fit-content;
+                justify-self: center;
+                align-self: center;
+            }
+        
+            .rc-form {
+                grid-row: 2 / 4;
+                grid-column: 2 / 3;
+                display: flex;
+                flex-direction: row;
+                height: 100%;
+                form {
+                    justify-content: center;
+                }
+            }
+        }
+    }
 }
