--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -20,8 +20,8 @@
 
 /* Styling DOM */
 
-$primary-color: #00C6AF;
-$secondary-color: black;
+$primary-color: #25C2A0;
+$secondary-color: #18191A;
 
 $secondary-font: 'Ubuntu Mono', monospace;
 
