Fixes token expiration - bugs found on redirects - bugs on responsive css - adds logout button

--- a/src/app/home-page/home.scss
+++ b/src/app/home-page/home.scss
@@ -9,12 +9,11 @@
 }
 
 .custom-navbar {
-    .nav-home {
+    #nav-home {
         color: $primary-color;
         text-decoration: underline;
     }
 }
-
 
 section.home-search {
     max-width: 400px;
