--- a/src/app/register-location/reg-loc.scss
+++ b/src/app/register-location/reg-loc.scss
@@ -9,7 +9,7 @@
 }
 
 .custom-navbar {
-    .nav-reg-loc {
+    #nav-reg-loc {
         color: $primary-color;
         text-decoration: underline;
     }
