--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -22,6 +22,8 @@
 
 $primary-color: #25C2A0;
 $secondary-color: #18191A;
+$darkest-color: #000;
+$lightest-color: #fff;
 
 $secondary-font: 'Ubuntu Mono', monospace;
 
