--- a/src/app/login-page/login.scss
+++ b/src/app/login-page/login.scss
@@ -12,13 +12,17 @@
 }
 
 .card-login {
-    @include set-background(white);
+    @include set-background($lightest-color);
+    border: solid 1px $primary-color;
     margin: 0 0.4rem;
     padding: 1.5rem 1.2rem;
 
     display: flex;
     flex-direction: column;
     gap: 1rem;
+
+    border: 1px solid $primary-color;
+    box-shadow: inset 0 0 4px $secondary-color;
 }
 
 .card-footer-login {
@@ -36,7 +40,66 @@
 }
 
 .card-info {
-    button {
+    box-shadow: inset 0 0 4px $secondary-color;
+    transition: box-shadow 0.2s ease-in-out;
+    &:hover {
+        box-shadow: none;
+    }
+    a {
         margin: auto;
     }
 }
+
+@media screen and (min-width: 992px) {
+    body {
+        background-color: transparent;
+    }
+    .container {
+        .card-login {
+            float: right;
+            width: 60%;
+            max-width: 40em;
+            grid-row: 2 / 3;
+            border: 1px solid $primary-color;
+            box-shadow: inset 0 0 4px $secondary-color;
+            transition: box-shadow 0.2s ease-in-out, 
+                border 0.2s ease-in-out;
+            &:hover {
+                box-shadow: none;
+                border: 1px solid transparent;
+            }
+        }
+
+        .new-here {
+            text-align: left;
+            .card.card-info {
+                margin-top: 1em;
+                float: left;
+                max-width: 50em;
+            }
+        }
+
+
+        .our-team {
+            text-align: right;
+            .card.card-info {
+                margin-top: 1em;
+                float: right;
+                max-width: 50em;
+            }
+        }
+
+        .ellipses {
+            #el-large {
+                top: 60vh;
+                left: -5vw;
+            }
+
+            #el-small {
+                top: 11vh;
+                left: 30vw;
+            }
+        }
+    }
+}
+
