--- a/src/app/report-case-page/report-case.scss
+++ b/src/app/report-case-page/report-case.scss
@@ -19,7 +19,6 @@
         display: flex;
         flex-direction: column;
         gap: 0.7em;
-        height: 100%;
         width: 100%;
         align-items: center;
 
@@ -44,7 +43,7 @@
     }
 }
 
-.nav-rep-case {
+#nav-rep-case {
     color: $primary-color;
     text-decoration: underline;
 }
@@ -76,6 +75,9 @@
             .rc-form {
                 margin-left: $rc-left-margin;
                 margin-right: $rc-right-margin;
+                height: 100%;
+                display: block;
+                margin-bottom: 0;
                 #rc-form-label {
                     font-size: larger;
                 }
