--- a/src/app/user-profile/user-profile.scss
+++ b/src/app/user-profile/user-profile.scss
@@ -1,7 +1,7 @@
 @import "../styles.scss";
 
 // navbar
-.nav-profile {
+#nav-profile {
     color: $primary-color;
     text-decoration: underline;
 }
