--- a/src/app/admin_display_stats/dispStats.scss
+++ b/src/app/admin_display_stats/dispStats.scss
@@ -151,6 +151,7 @@
         align-items: center;
         width: 75%;
         margin: auto;
+        margin-top: 2em;
         font-size: 1.2em;
 
         .stats-date-group {
@@ -179,6 +180,7 @@
             }
 
     }
+
 }
 
 .stats-diagrams {
