Adds icon to all html pages

--- a/src/app/home-page/home.scss
+++ b/src/app/home-page/home.scss
@@ -46,6 +46,12 @@ section.home-map {
     }
 }
 
+.leaflet-popup-content {
+    a {
+        color: $primary-color;
+    }
+}
+
 @media screen and (min-width: 992px) {
     .container {
         width: 100%;
